--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
+TODO list for M   
+$Id$
+
+- fix configure: it currently depends on the right order of with-wxGTK/without-wxXt
+
+- check how Python handles (wx)Strings, try some interaction
+
+- move to kbList
 
 - doc++ dumps core when generating documentation
 
